<resources>
    <string name="app_name">Novcanik</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string-array name="valute">
        <item>BAM</item>
        <item>RSD</item>
        <item>HRK</item>
        <item>USD</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>CHF</item>
        <item>JPY</item>
        <item>AUD</item>
        <item>CAD</item>
        <item>RUB</item>
        <item>CHY</item>
    </string-array>

    <string-array name="profil">
        <item>Novcanik</item>
        <item>Devize</item>
        <item>Banka</item>
    </string-array>

    <string-array name="category">
        <item>Hrana i piće</item>
        <item>Šoping</item>
        <item>Transport</item>
        <item>Režije</item>
        <item>Automobil</item>
        <item>Život i zabava</item>
        <item>Investicije</item>
        <item>Putovanja</item>
        <item>Doktor i lijekovi</item>
        <item>Edukacija</item>
        <item>Ostalo</item>
    </string-array>
    <string name="title_activity_home2">home2Activity</string>
    <string name="srp_registruj_se">Registruj se</string>
    <string name="srp_prijavi_se">Prijavi se</string>
    <string name="srp_unesite_svoj_email">Unesite svoj email</string>
    <string name="srp_sacuvaj_sifru">Sacuvaj sifru</string>
    <string name="srp_unesite_svoju_sifru">Unesite svoju sifru</string>
    <string name="srp_novcanik">NOVČANIK</string>
    <string name="srp_greska_Email_nije_kompletan">Email nije kompletan</string>
    <string name="srp_greska_sifra_manje8">Šifra mora imati 8 karaktera</string>
    <string name="srp_greska_popuniti_sva_polja">Popunite sva polja</string>
    <string name="srp_ime">Ime</string>
    <string name="srp_prezime">Prezime</string>
    <string name="srp_email">Email</string>
    <string name="srp_sifra">Šifra</string>
    <string name="srp_ponovite_sifru">Ponovite šifru</string>
    <string name="srp_no_macth_profil">Unesene podaci ne odgovaraju nijednom nalogu</string>




    <string name="eng_no_macth_profil">Unesene podaci ne odgovaraju nijednom nalogu</string>
    <string name="eng_registruj_se">Register</string>
    <string name="eng_prijavi_se">Login</string>
    <string name="eng_unesite_svoj_email">Enter your email</string>
    <string name="eng_sacuvaj_sifru">Sacuvaj sifru</string>
    <string name="eng_unesite_svoju_sifru">Enter your password</string>
    <string name="eng_novcanik">WALLERT</string>
    <string name="eng_greska_Email_nije_kompletan">Email nije kompletan</string>
    <string name="eng_greska_sifra_manje8">Šifra mora imati 8 karaktera</string>
    <string name="eng_greska_popuniti_sva_polja">Popunite sva polja</string>
    <string name="eng_ime">Name</string>
    <string name="eng_prezime">Surname</string>
    <string name="eng_email">Email</string>
    <string name="eng_sifra">Password</string>
    <string name="eng_ponovite_sifru">Repeat password</string>

    <string-array name="plan">
        <item>Dnevni</item>
        <item>Sedmicni</item>
        <item>Mjesecni</item>
    </string-array>
</resources>
