<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#669900"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/imageButtonOpen"
        android:layout_width="244dp"
        android:layout_height="279dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="#669900"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/wallethome" />

    <ImageView
        android:id="@+id/imageViewLoding"
        android:layout_width="72dp"
        android:layout_height="62dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_home"
        app:srcCompat="@drawable/loding" />

    <TextView
        android:id="@+id/text_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/srp_novcanik"
        android:textColor="@android:color/background_light"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonOpen" />

    <LinearLayout
        android:id="@+id/loginBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonOpen">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/wallemessage" />

            <EditText
                android:id="@+id/editTextUserEmailLogin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@android:color/background_light"
                android:ems="10"
                android:hint="@string/srp_unesite_svoj_email"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/background_light"
                android:textColorHighlight="@android:color/background_light"
                android:textColorHint="@android:color/background_light"
                android:textColorLink="@android:color/background_light" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/walletlock" />

            <EditText
                android:id="@+id/editTextUserPasswordLogin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@android:color/background_light"
                android:ems="10"
                android:hint="@string/srp_unesite_svoju_sifru"
                android:inputType="textPassword"
                android:textColor="@android:color/background_light"
                android:textColorHighlight="@android:color/background_light"
                android:textColorHint="@android:color/background_light"
                android:textColorLink="@android:color/background_light" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:visibility="gone">

            <TextView
                android:id="@+id/textViewCheckBox"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/srp_sacuvaj_sifru" />

            <CheckBox
                android:id="@+id/checkBoxSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHighlight="#00000000"
                android:textColorLink="#00000000" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <Button
                android:id="@+id/btnRegisterAct"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#ffffff"
                android:ellipsize="none"
                android:text="@string/srp_registruj_se"
                android:textColor="@color/colorLightGreen"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnLoginUser"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btnLoginUser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#ffffff"
                android:text="@string/srp_prijavi_se"
                android:textColor="@color/colorLightGreen"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnRegisterAct" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>