<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#669900"
    android:orientation="vertical"
    tools:context=".RegistreActivity">

    <ImageButton
        android:id="@+id/btnTestA"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="#669900"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/wallethome" />

    <LinearLayout
        android:id="@+id/linearLayoutNameUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/walletman" />

        <EditText
            android:id="@+id/editTextNameUser"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#ffffff"
            android:ems="10"
            android:hint="@string/srp_ime"
            android:inputType="textPersonName"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutLastNameUser"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/walletsurname" />

        <EditText
            android:id="@+id/editTextLastNameUser"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#ffffff"
            android:ems="10"
            android:hint="@string/srp_prezime"
            android:inputType="textPersonName"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutEmailUser"
        android:layout_width="match_parent"
        android:layout_marginRight="15dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/wallemessage" />

        <EditText
            android:id="@+id/editTextEmailUser"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#ffffff"
            android:ems="10"
            android:hint="@string/srp_email"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutPasswordUser"
        android:layout_width="match_parent"
        android:layout_marginRight="15dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/walletlock" />

        <EditText
            android:id="@+id/editTextPasswordUser"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#ffffff"
            android:ems="10"
            android:hint="@string/srp_sifra"
            android:inputType="textPassword"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutPasswordAgainUser"
        android:layout_width="match_parent"
        android:layout_marginRight="15dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/walletlock" />

        <EditText
            android:id="@+id/editTextPasswordAgainUser"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#ffffff"
            android:ems="10"
            android:hint="@string/srp_ponovite_sifru"
            android:inputType="textPassword"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/wallermoneyicone" />

        <Spinner
            android:id="@+id/spinnerMoney"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:backgroundTint="@android:color/background_light"
            android:dropDownSelector="@android:color/background_light"
            android:popupBackground="#9acc60"
            android:textColor="@android:color/background_light" />
    </LinearLayout>

    <Button
        android:id="@+id/btnRegistreUser"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="107dp"
        android:layout_marginRight="105dp"
        android:backgroundTint="#ffffff"
        android:text="@string/srp_registruj_se"
        android:textColor="#9acc60" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#669900"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewTestA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textViewTestAC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>